--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve",
     "test": "vitest",
-    "testui": "vitest --ui"
+    "testui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "author": "Krishna Gupta",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "@vitest/coverage-v8": "^1.5.2",
     "@vitest/ui": "^1.4.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
